@@ -1,7 +1,7 @@
 <% @title = "client-side-validations test" %>
 
 <%= test_base %>
-<%= script_tag 'validateSelector' %>
+<%= script_tag 'validateSelector'%>
 <%= test :validators, :form_builders, :callbacks %>
 
 <h1 id="qunit-header"><%= @title %></h1>
